# headroom

./: AGENTS.md  README.md  SECURITY.md  desktop_bridge_entry.py
.github/workflows/: ci.yml
dashboard/: template.html
docs/: KNOWN-LIMITS.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/desktop/: ACCESSIBILITY-VALIDATION.md  ACCOUNT-LIFECYCLE-VALIDATION.md  CLAUDE-LOGIN-VALIDATION.md  CODEX-LOGIN-VALIDATION.md  COLLECTION-RESILIENCE-VALIDATION.md  COMPATIBILITY-VALIDATION.md  CORE-FUNCTION-GATE.md  CORE-RECOVERY-VALIDATION.md  DIAGNOSTICS-VALIDATION.md  HANDOFF-HEALTH-VALIDATION.md  LIFECYCLE-VALIDATION.md  LOGIN-NOTIFICATION-STABILITY.md  ONBOARDING-VALIDATION.md  ROUTING-VALIDATION.md  SETTINGS-VALIDATION.md  SURFACE-SYNC-VALIDATION.md  TOKEN-BURN-VALIDATION.md  UPDATER-VALIDATION.md
docs/desktop/release-notes/: 0.4.0.md
headroom/: __init__.py  __main__.py  account_lifecycle.py  activity.py  capabilities.py  collect.py  compatibility.py  connect.py  dashboard.py  desktop_bridge.py  diagnostics.py  handoff.py  handoff_codex.py  notify.py  paths.py  registry.py  route.py  supervisor.py  widget.py  wizard.py
integrations/menubar/: .gitignore  README.md  package-lock.json  package.json
integrations/menubar/src-tauri/: Cargo.toml  tauri.conf.json  tauri.prerelease.conf.json
integrations/menubar/src-tauri/examples/: verify_updater_artifact.rs
integrations/menubar/src-tauri/src/: icon.rs  lib.rs
integrations/menubar/tests/: accessibility.test.mjs  frontend.test.mjs
scripts/: build-desktop-sidecar.sh  release-version.py  updater_release.py
tests/: fake_claude.py  test_account_lifecycle.py  test_activity.py  test_codex_desktop_login.py  test_compatibility.py  test_desktop_bridge.py  test_desktop_login.py  test_diagnostics.py  test_handoff_codex.py  test_headroom.py  test_release_version.py  test_resilient_collection.py  test_supervisor.py  test_updater_release.py  test_v2_supervision.py  test_widgets.py
tests/fixtures/desktop-bin/: claude  codex
