[package]
name = "headroom-menubar"
version = "0.4.0"
description = "headroom menu-bar / system-tray popover: the liquid-glass /widget page as a native click-down panel"
license = "MIT"
repository = "https://github.com/domanski-ai/headroom"
edition = "2021"
rust-version = "1.88"

[lib]
name = "headroom_menubar_lib"

# Exact pins (repeatability for the OSS build; bump deliberately).
[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "=2.3.3", features = ["tray-icon"] }
tauri-plugin-shell = "=2.3.5"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-dialog = "=2.3.3"
tokio = { version = "=1.52.0", features = ["net", "time"] }
open = "=5.4.0"
serde_json = "=1.0.145"
tiny-skia = "=0.11.4"
libc = "=0.2.183"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
